--- a/index.html
+++ b/index.html
@@ -9,7 +9,30 @@
 
 </head>
 <body>
-    <h1>Checking</h1>
+    <div class="leftBar active">
+        <div class="icon"><img src="Icons/Bars.png" id="expandButton"></div>
+        <div class="icon"><img src="Icons/Clock.png" class="clockButton"></div>
+        <div class="icon"><img src="Icons/Stopwatch.png" class="stopwatchButton"></div>
+        <div class="icon"><img src="Icons/Timer.png" class="timerButton"></div>
+        
+    </div>
+
+    <div class="leftBarExpanded">
+        <div class="icon">
+            <div class="clockHeading adjust1">Clock</div>
+            <img src="Icons/Clock.png" class="clockButton">
+        </div>
+        <div class="icon">
+            <div class="clockHeading">Stopwatch</div>
+            <img src="Icons/Stopwatch.png" class="stopwatchButton">
+        </div>
+        <div class="icon">
+            <div class="clockHeading adjust2">Timer</div>
+            <img src="Icons/Timer.png" class="timerButton">
+        </div>  
+    </div>
+
+        
     <script src="script.js"></script>
 </body>
 </html>
