--- a/index.html
+++ b/index.html
@@ -32,6 +32,19 @@
         </div>  
     </div>
 
+    <div class="clock">
+        <div class="border">
+            <div id="day">Tuesday</div><br>
+            <div id="timeOfDay">Morning</div><br>
+            <div id="hourClock">10 : </div>
+            <div id="minuteClock">30 : </div>
+            <div id="secondClock">20</div><br>
+            <div id="dateClock">Feb </div>
+            <div id="monthClock">/ 6 </div>
+            <div id="yearClock">/ 2018</div>
+        </div>
+    </div>
+
         
     <script src="script.js"></script>
 </body>
