--- a/index.html
+++ b/index.html
@@ -34,18 +34,19 @@
 
     <div class="clock">
         <div class="border">
-            <div id="day">Tuesday</div><br>
-            <div id="timeOfDay">Morning</div><br>
-            <div id="hourClock">10 : </div>
-            <div id="minuteClock">30 : </div>
-            <div id="secondClock">20</div><br>
-            <div id="dateClock">Feb </div>
-            <div id="monthClock">/ 6 </div>
-            <div id="yearClock">/ 2018</div>
+            <div id="day"></div><br>
+            <div id="timeOfDay"></div><br>
+            <div id="hourClock"></div>
+            <div id="minuteClock"></div>
+            <div id="secondClock"></div><br>
+            <div id="monthClock"></div>
+            <div id="dateClock"></div>
+            <div id="yearClock"></div>
         </div>
     </div>
 
-        
-    <script src="script.js"></script>
+    <script src="Javascripts/LeftbarHandler.js"></script>
+    <script src="Javascripts/Clock.js"></script>
+    
 </body>
 </html>
