--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
         </div>  
     </div>
 
-    <div class="clock">
+    <div class="clock" id="clock">
         <div class="border">
             <div id="day"></div><br>
             <div id="timeOfDay"></div><br>
@@ -45,8 +45,33 @@
         </div>
     </div>
 
+    <div class="stopwatch active">
+        <div class="border">
+            <div id="startStopButton">Start</div>
+            <div id="splitResetButton">Reset</div>
+            <div id="minuteStopwatch">0 :</div>
+            <div id="secondStopwatch">0 :</div>
+            <div id="milisecondStopwatch">0</div>
+        </div>
+    </div>
+
+    <div class="splitBox active">
+        <div class="splitBoxRow">
+            <div id="countNumber"><b>Count</b></div>
+            <div id="splitTime"><b>Split Time</b></div>
+            <div id="deltaTime"><b>Delta Time</b></div>
+        </div>
+        <!-- <div class="splitBoxRow">
+            <div id="countNumber">Count 0</div>
+            <div id="splitTime">00:00:94</div>
+            <div id="deltaTime">+00:00.16</div>
+        </div> -->
+        
+    </div>
+
     <script src="Javascripts/LeftbarHandler.js"></script>
     <script src="Javascripts/Clock.js"></script>
+    <script src="Javascripts/Stopwatch.js"></script>
     
 </body>
-</html>
+</html> 
