Selectivity Added Between 3 Options

--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
         </div>  
     </div>
 
-    <div class="clock" id="clock">
+    <div class="clock active" id="clock">
         <div class="border">
             <div id="day"></div><br>
             <div id="timeOfDay"></div><br>
@@ -45,7 +45,7 @@
         </div>
     </div>
 
-    <div class="stopwatch active">
+    <div class="stopwatch" id="stopwatch">
         <div class="border">
             <div id="startStopButton">Start</div>
             <div id="splitResetButton">Reset</div>
@@ -55,7 +55,7 @@
         </div>
     </div>
 
-    <div class="splitBox active">
+    <div class="splitBox" id="splitbox">
         <div class="splitBoxRow">
             <div id="countNumber"><b>Count</b></div>
             <div id="splitTime"><b>Split Time</b></div>
