Selectivity Added for Timer

--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
     </div>
 
     <div id="timeUpText" class="timeUpText">Time's Up !!!</div>
-    <div class="timer active" id="timer">  
+    <div class="timer" id="timer">  
         <div class="border">
             <div id="hourTimer">
                 <div id="hourIncreaseButton">&#8657;</div>
