Before ntp time sync

--- a/Clock/public/index.html
+++ b/Clock/public/index.html
@@ -48,7 +48,7 @@
     </div>
        
 
-    <div class="stopwatch" id="stopwatch"> 
+    <div class="stopwatch bg-dark" id="stopwatch"> 
         <div class="border">
             <div id="startStopButton">Start</div>
             <div id="splitResetButton">Reset</div>
@@ -76,7 +76,7 @@
     </div>
 
     <div id="timeUpText" class="timeUpText">Time's Up !!!</div>
-    <div class="timer active" id="timer">  
+    <div class="timer bg-dark" id="timer">  
         <div class="border">
             <div class="container">
                 <div class="row">
